# cmake-qt-translation-example

./: CMakeLists.txt  README.md  main.cpp  translations.qrc
lang/: fr.ts  ru.ts
